Se añadio cotizaciones y ventas

--- a/email/templates/password.ejs
+++ b/email/templates/password.ejs
@@ -78,7 +78,7 @@
       <img src="cid:logoImage" alt="Kuva Photo Booth">
     </div>
     <h1>Restablecimiento de contraseña</h1>
-    <p>Hola <%= fullName %>,</p>
+    <p>Hola <%= name %>,</p>
     <p>Has solicitado restablecer tu contraseña. Haz clic en el siguiente enlace para continuar. Tienes 10 minutos para realizar esta acción:</p>
     <div class="button-container">
       <a href="<%= resetUrl %>" class="button">Restablecer Contraseña</a>
